# d7s

./: .dockerignore  .envrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  docker-compose.yml  flake.nix  justfile  rustfmt.toml
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
crates/d7s_auth/: Cargo.toml
crates/d7s_auth/src/: lib.rs
crates/d7s_db/: Cargo.toml
crates/d7s_db/src/: connection.rs  lib.rs  postgres.rs  sqlite.rs
crates/d7s_ui/: Cargo.toml
crates/d7s_ui/src/: lib.rs
crates/d7s_ui/src/handlers/: filter.rs  key_event.rs  mod.rs  modal.rs  navigation.rs
crates/d7s_ui/src/widgets/: buttons.rs  hotkey.rs  hotkey_view.rs  mod.rs  modal.rs  search_filter.rs  sql_executor.rs  status_line.rs  table.rs  text_input.rs  top_bar_view.rs
docker/: init-db.sh  seed.sql
src/: app.rs  app_state.rs  connection_manager.rs  database_explorer.rs  database_explorer_state.rs  errors.rs  event_handlers.rs  filtered_data.rs  filtering.rs  main.rs  rendering.rs  table_data_actions.rs  virtual_table.rs
src/auth/: mod.rs
src/db/: connection.rs  mod.rs  postgres.rs  sqlite.rs
src/services/: connection_service.rs  mod.rs  password_service.rs
src/sql/: safety.rs
src/ui/: mod.rs
src/ui/handlers/: key_event.rs  mod.rs  modal.rs  navigation.rs
src/ui/widgets/: hotkey.rs  hotkey_view.rs  mod.rs  modal.rs  search_filter.rs  sql_executor.rs  table.rs  text_input.rs  top_bar_view.rs
src/widgets/: buttons.rs  connection.rs  connection_modal.rs  hotkey.rs  hotkey_view.rs  mod.rs  modal.rs  search_filter.rs  sql_executor.rs  table.rs  top_bar_view.rs
