[workspace]
members = ["crates/d7s_auth", "crates/d7s_db", "crates/d7s_ui"]

[package]
name = "d7s"
version = "0.1.0"
description = "Database client"
authors = ["Rob <robertazzopardi@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/robertazzopardi/d7s"
edition = "2024"
readme = "README.md"
keywords = [
    "database",
    "client",
    "tui",
    "sql",
    "postgresql",
    "sqlite",
    "ratatui",
    "terminal",
    "query",
    "explorer",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "database-implementations",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.bundle]
identifier = "com.robertazzopardi.d7s"

[workspace.dependencies]
d7s_auth = { path = "crates/d7s_auth", version = "0.1.0" }
d7s_db = { path = "crates/d7s_db", version = "0.1.0" }

[dependencies]
d7s_db.workspace = true
d7s_ui = { path = "crates/d7s_ui", version = "0.1.0" }
crossterm = { version = "0.28.1", default-features = false }
ratatui = { version = "0.29.0", features = [
    "crossterm",
], default-features = false }
color-eyre = "0.6.3"
tokio = "1.47.0"
d7s_auth.workspace = true

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"

