[package]
name = "d7s"
version = "0.2.0"
description = "Database client"
authors = ["Rob <robertazzopardi@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/robertazzopardi/d7s"
edition = "2024"
readme = "README.md"
keywords = [
    "database",
    "tui",
    "postgresql",
    "sqlite",
    "terminal",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "database-implementations",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.bundle]
identifier = "com.robertazzopardi.d7s"

[dependencies]
# UI
crossterm = { version = "0.29.0", default-features = false, features = ["osc52", "bracketed-paste", "events"] }
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
tui-menu = "0.3.1"
unicode-width = { version = "0.2", default-features = false }

# Async
tokio = { version = "1.47.0", features = ["full"] }
async-trait = "0.1"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = "2.3"
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
    "array-impls",
] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }

# Keyring
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "sync-secret-service",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"

# Types
url = "2.5"
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", default-features = false }
rust_decimal = { version = "1.40.0", default-features = false, features = ["db-tokio-postgres"] }

# Utilities
color-eyre = "0.6.3"
dirs = "6.0.0"

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
