[package]
name = "d7s_auth"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = []

[dependencies]
keyring = { version = "3.6.3", features = [
    "apple-native",           # macOS and iOS
    "windows-native",         # Windows
    "linux-native-sync-persistent",  # Linux (keyutils + secret-service)
    "sync-secret-service",    # Linux, FreeBSD, OpenBSD (DBus Secret Service)
]}
