[package]
name = "d7s_auth"
version = "0.1.0"
edition = "2024"
description = "Credential storage for d7s using platform keyrings"
license = "MIT"
repository = "https://github.com/robertazzopardi/d7s"
readme = "../../README.md"
keywords = [
    "keyring",
    "credentials",
    "auth",
    "secrets",
    "password",
]
categories = [
    "cryptography",
    "development-tools",
    "memory-management",
]

[features]
default = []
dev = []

[dependencies]
keyring = { version = "3.6.3", features = [
    "apple-native",                 # macOS and iOS
    "windows-native",               # Windows
    "linux-native-sync-persistent", # Linux (keyutils + secret-service)
    "sync-secret-service",          # Linux, FreeBSD, OpenBSD (DBus Secret Service)
] }
