[package]
name = "d7s_db"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dirs = "6.0.0"
rusqlite = "0.37.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
keyring.workspace = true
serde_json = "1.0.142"
uuid = "1.18.0"
chrono = { version = "0.4.41", default-features = false }
