[package]
name = "d7s_db"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dirs = "6.0.0"
rusqlite = "0.37.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.42", default-features = false }
d7s_auth.workspace = true
