[package]
name = "d7s_db"
version = "0.1.0"
edition = "2024"
description = "Database abstraction layer for d7s (PostgreSQL and SQLite)"
license = "MIT"
repository = "https://github.com/robertazzopardi/d7s"
readme = "../../README.md"
keywords = [
    "database",
    "postgresql",
    "sqlite",
    "async",
    "connection",
    "query",
    "migration",
    "driver",
    "abstraction",
]
categories = [
    "database-implementations",
    "development-tools",
    "asynchronous",
]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
url = "2.5"
color-eyre = "0.6.5"
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = "2.3"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
    "array-impls"
] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", default-features = false }
chrono = { version = "0.4.41", default-features = false }
rust_decimal = { version = "1.40.0", default-features = false, features = ["db-tokio-postgres"] }
d7s_auth.workspace = true
