[package]
name = "d7s_ui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI components for d7s"
license = "MIT"
repository = "https://github.com/robertazzopardi/d7s"
readme = "../../README.md"
keywords = [
    "tui",
    "terminal",
    "ratatui",
    "ui",
    "crossterm",
    "widgets",
    "keybindings",
    "modal",
    "table_view",
]
categories = [
    "development-tools",
    "gui",
    "command-line-utilities",
]

[dependencies]
d7s_auth.workspace = true
d7s_db.workspace = true
serde_json = "1.0"
ratatui = { version = "0.29.0", features = [
    "crossterm",
], default-features = false }
crossterm = { version = "0.28.1", default-features = false }
unicode-width = { version = "0.2", default-features = false }
tui-menu = "0.3.1"
